<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.quiz.quizappsport.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/welcome_message"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:hint="@string/et_hint_email"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:hint="@string/et_hint_pass"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_bright"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>